welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:6: error: not found: value setCouleur
  setCouleur(c)
  ^MethodsPicture:32: error: missing arguments for method faireV in class MethodsPicture;
follow this method with `_' if you want to treat it as a partially applied function
    faireV
    ^MethodsPicture:28: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.MethodsPicture'
override def run() {
             ^