welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
}


def faireV(c:Color){
  setCouleur(c)
  leveBrosse()
  baisseBrosse()
  avance()
  gauche()
  avance()
  leveBrosse()
  baisseBrosse()
  recule()
  droite()
  avance()
  leveBrosse()
  baisseBrosse()
  avance()
  avance()
  gauche()
  avance()
  avance()
  
}


override def run() {
  avance()
	avance()
  for (compteur<-1 to 4){
    faireV
  }
  recule()
  recule()
}